--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://vaayne.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = "Vaayne's Tea House"
 theme = 'PaperMod'
