Add mise.toml configuration and AGENTS.md documentation; update annual review post

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 		"ghcr.io/devcontainers/features/hugo:1": {
 			"extended": true,
 			"version": "latest"
-		}
+		},
+		"ghcr.io/devcontainers-extra/features/mise:1": {}
 	},
 	"customizations": {
 		"vscode": {
