--- a/mise.toml
+++ b/mise.toml
@@ -1,5 +1,6 @@
 [tools]
 hugo = "0.152.2"
+"ubi:dprint/dprint" = "0.50.1"
 
 [tasks.build]
 description = "Build the Hugo site"
@@ -23,3 +24,11 @@ run = "rm -rf public"
 [tasks.deploy]
 description = "Build for production"
 run = "hugo --minify"
+
+[tasks.format]
+description = "Format all files with dprint"
+run = "dprint fmt"
+
+[tasks."format:check"]
+description = "Check formatting without making changes"
+run = "dprint check"
